--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,1 @@
-insaurance.provider.url= http://localhost:9191//insaurance-service/getAllPlans
+insurance.provider.url= http://localhost:9191/insaurance-service/getAllPlans
